update default GC settings, APP_PROPS multiline example in compose